# boat3_client

./: Cargo.toml  README.md
src/: lib.rs  main.rs  ui.rs
src/remote/: camera.rs  controller.rs  gpio.rs  mod.rs  net.rs
src/remote/protocol/: gpio.rs  mod.rs
src/ui/: app.rs  camera.rs  connection.rs  gpio.rs  info.rs  mod.rs
