[package]
name = "boat3_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.13"
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = "0.33.2"
reqwest = { version = "0.12.24", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = {version = "1.48.0", features = ["full"]}
